<resources>
    <string name="app_name">Renting</string>
    <string name="action_settings">Setting</string>
    <string name="startpagetext">Find all kinds of rentals in one place</string>
    <string name="sign_up_note">All fields are compulsory</string>
    <string name="tnc">By signing up, you will accept the Terms and Conditions and Privacy Policy</string>
    <string name="title_activity_maps">Map</string>
    <string name="post_title">Enter title for your string</string>
    <string name="setloc">Set your location in map : </string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="tabfeaturetext">Tap the features available in your property:</string>
    <string name="enterdes">Enter your description about property</string>
    <string name="drawer_closed">Closed Navigation Drawer</string>
    <string name="doesowner">Do home owner live in same building?</string>
    <string-array name="mainornot">
        <item>Main</item>
        <item>Alley</item>
    </string-array>
    <string-array name="yesno">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="list_drawer_items">
        <item>Home</item>
        <item>Notifications</item>
        <item>Favourities</item>
        <item>My profile</item>
        <item>Settings</item>
        <item>Logout</item>
        <item>Make a post</item>
    </string-array>
    <string-array name="aboutusarray">
        <item>We are Rentma..founded on January 2015 with just few developers to help people find rentals easily</item>
    </string-array>
    <string-array name="tncarray">
        <item>By signing up, you will accept the Terms and Conditions and Privacy Policy</item>
    </string-array>
    <string name="title_activity_get_location_maps">Map</string>
    <string name="postedtitle">Residential flat for rent in Newroad</string>
    <string name="subidha">Subidha yukta flat vadama</string>
    <string name="queryhint">Search by location</string>
    <string name="aboutus">We are Rentma..founded on January 2015 with just few developers to help people find rentals easily</string>
</resources>
