<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.android.renting.NewPost">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/post_title"
            android:textSize="12sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/edittext_background_black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="NPR"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@android:color/holo_orange_dark"
                android:textSize="12sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Enter price"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edittext_background_black"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setloc"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map_frag"
            >
            <fragment
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:text="@string/tabfeaturetext"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/background_tab_icons">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/parking_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="Parking Lot"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/background_tab_icons"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/water"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="24*7 Water"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/background_tab_icons"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cable"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="TV cable"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/background_tab_icons"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/internet1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="Internet"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/background_tab_icons"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/parking_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="Parking Lot"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/background_tab_icons"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/parking_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="Parking Lot"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="@drawable/background_tab_icons"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/parking_icon"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="Parking Lot"
                        />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Owner's description:"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/enterdes"
            android:padding="10dp"
            android:background="@drawable/edittext_background_black"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:layout_gravity="start"
            android:textSize="14sp"
            android:gravity="start"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:text="@string/doesowner"
            />

        <Spinner
            android:id="@+id/doesownerspin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:padding="10dp"
            android:entries="@array/yesno"
            android:background="@android:drawable/btn_dropdown"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add images of property"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_house_icon"
            android:id="@+id/add_home_image"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:layout_marginRight="80dp"
                android:text="Total no. of rooms:"
                />
            <EditText
                android:layout_width="100dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/edittext_background_black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type of road:"
                android:layout_marginRight="90dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                />
            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:entries="@array/mainornot"
                android:spinnerMode="dropdown"
                android:padding="10dp"
                android:background="@android:drawable/btn_dropdown"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:text="Is price negotiable?"
                android:layout_marginRight="80dp"
                />
            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:entries="@array/yesno"
                android:spinnerMode="dropdown"
                android:padding="10dp"
                android:background="@android:drawable/btn_dropdown"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
